<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4e9572"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtStudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:text="@string/txt_studentID"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:text="@string/txt_studentName"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtDeclare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:text="@string/txt_declare"
        android:textColor="@color/black"
        android:textSize="14sp" />
</LinearLayout>